<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_main_popup"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/main_popup_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_main_popup_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_main_popup_history"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/main_popup_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_main_popup_history"
                android:layout_centerHorizontal="true"
                android:text="@string/main_popup_history"
                android:textColor="#468fdd" />
        </RelativeLayout>

        

        <RelativeLayout
            android:id="@+id/rl_main_popup_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_main_popup_location"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/main_popup_location" 
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_main_popup_location"
                android:layout_centerHorizontal="true"
                android:text="@string/main_popup_message"
                android:textColor="#468fdd" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_main_popup_safetyarea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_main_popup_safetyarea"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/main_popup_safetyarea" 
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_main_popup_safetyarea"
                android:layout_centerHorizontal="true"
                android:text="@string/main_popup_safetyarea"
                android:textColor="#468fdd" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_main_popup_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_main_popup_message"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/main_popup_message" 
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_main_popup_message"
                android:layout_centerHorizontal="true"
                android:text="@string/main_popup_family"
                android:textColor="#468fdd" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>