<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edeef0" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <LinearLayout
        android:id="@+id/ll_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_actionbar"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/rl_track_safety"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff" >

            <RelativeLayout
                android:id="@+id/rl_track_safety_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/img_track_safety_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/track_model_safety" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_track_safety_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_toLeftOf="@+id/rl_track_safety_select"
                android:layout_toRightOf="@+id/rl_track_safety_icon"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_track_safety_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tv_track_safety_content_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center|left"
                        android:text="安全模式"
                        android:textColor="#404040"
                        android:textSize="25sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_track_safety_content_specific"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:id="@+id/tv_track_safety_content_specific"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location_model_safety"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_track_safety_select"
                android:layout_width="40dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="3dp" >

                <Button
                    android:id="@+id/btn_track_safety_select"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_btn_track" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_track_economize"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <RelativeLayout
                android:id="@+id/rl_track_economize_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/img_track_economize_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/track_model_economize" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_track_economize_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_toLeftOf="@+id/rl_track_economize_select"
                android:layout_toRightOf="@+id/rl_track_economize_icon"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_track_economize_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tv_track_economize_content_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center|left"
                        android:text="省电模式"
                        android:textColor="#404040"
                        android:textSize="25sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_track_economize_content_specific"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:id="@+id/tv_track_economize_content_specific"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location_model_economize" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_track_economize_select"
                android:layout_width="40dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="3dp" >

                <Button
                    android:id="@+id/btn_track_economize_select"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_btn_track" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_track_urgency"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <RelativeLayout
                android:id="@+id/rl_track_urgency_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/img_track_urgency_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/track_model_urgency" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_track_urgency_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_toLeftOf="@+id/rl_track_urgency_select"
                android:layout_toRightOf="@+id/rl_track_urgency_icon"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_track_urgency_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tv_track_urgency_content_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center|left"
                        android:text="紧急模式"
                        android:textColor="#404040"
                        android:textSize="25sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_track_urgency_content_specific"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        android:id="@+id/tv_track_urgency_content_specific"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location_model_urgency" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_track_urgency_select"
                android:layout_width="40dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="3dp" >

                <Button
                    android:id="@+id/btn_track_urgency_select"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_btn_track" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>